// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`User Page > should match the snapshot 1`] = `
<DocumentFragment>
  <div>
    <h1>
      User Page
    </h1>
    <div>
      <h2>
        User
      </h2>
      <p>
        Jack
      </p>
      <p>
        jack@test.com
      </p>
    </div>
  </div>
</DocumentFragment>
`;

exports[`User Page > should match the snapshot loading screen 1`] = `
<DocumentFragment>
  <div>
    <h1>
      User Page
    </h1>
    <div>
      Loading...
    </div>
  </div>
</DocumentFragment>
`;
